--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!-- <link rel="stylesheet" href="dist\css\home.ca4a94231f4cb6bfd01a.css"> -->
+  <link rel="stylesheet" href="dist\css\home.7a48c22ee468ec854339.css">
   <title>Dinamic-Stories</title>
 </head>
 <body>
 
 <div id="app"></div>
 <script src="http://localhost:9000/js/home.js"></script>
-<!-- <script src="dist\js\home.ca4a94231f4cb6bfd01a.js"></script> -->
+<script src="dist\js\home.7a48c22ee468ec854339.js"></script>
 
 </body>
 </html>
