--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
   <title>Dinamic-Stories</title>
 </head>
 <body>
-
 <div id="app"></div>
-<script src="http://localhost:9000/js/home.js"></script>
+<!-- <script src="http://localhost:9000/js/home.js"></script> -->
 <script src="dist\js\home.7a48c22ee468ec854339.js"></script>
-
 </body>
 </html>
