--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="dist\css\home.624953c94eb0fbfc421d.css">
+  <link rel="stylesheet" href="dist\css\home.5dfdba34b22797ad246c.css">
   <title>Dinamic-Stories</title>
 </head>
 <body>
 <div id="app"></div>
-<!-- <script src="http://localhost:9000/js/home.js"></script> -->
-<script src="dist\js\home.624953c94eb0fbfc421d.js"></script>
+<script src="http://localhost:9000/js/home.js"></script>
+<script src="dist\js\home.5dfdba34b22797ad246c.js"></script>
 </body>
 </html>
